Part 6.0 Room Added

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_WEBSERVER_URL=https://7f18c49486ea.ngrok.io
+REACT_APP_WEBSERVER_URL000=localhost:8080
+REACT_APP_WEBSERVER_URL=https://bc780ba2c1a9.ngrok.io
