--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "webrtc-adapter": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
